Add database seeder for public holidays
Introduced a `DatabaseSeeder` class to seed the database with
public holidays. Updated `Global.asax.cs` to call the new
`SeedDatabase` method during application startup. Added both
recurring and non-recurring holidays, ensuring the `PublicHolidays`
table is populated if empty. Updated project file to include the
new `DatabaseSeeder.cs` file.

--- a/EmployeeManagementApp.Data/EmployeeManagementApp.Data.csproj
+++ b/EmployeeManagementApp.Data/EmployeeManagementApp.Data.csproj
@@ -79,6 +79,7 @@
     <Compile Include="IEmployeeRepository.cs" />
     <Compile Include="IHolidayRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="seed\DatabaseSeeder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
