Add Working Days Calculator feature
Introduced a new feature to calculate working days between two dates, excluding weekends and holidays.

- Added `IWorkingDaysService` interface and its implementation in `WorkingDaysService` to handle the calculation logic.
- Registered `IWorkingDaysService` in `UnityConfig.cs` for dependency injection.
- Created `WorkingDaysController` to provide endpoints for the feature.
- Designed a new `Index.cshtml` view with a form for input and result display.
- Updated `_Layout.cshtml` to include a navigation link for the calculator.
- Implemented client-side validation and AJAX handling in the `Index.cshtml` view.

--- a/EmployeeManagementApp.Services/EmployeeManagementApp.Services.csproj
+++ b/EmployeeManagementApp.Services/EmployeeManagementApp.Services.csproj
@@ -89,7 +89,9 @@
     <Compile Include="HolidayService.cs" />
     <Compile Include="IEmployeeService.cs" />
     <Compile Include="IHolidayService.cs" />
+    <Compile Include="IWorkingDaysService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingDaysService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
